--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,30 +1,25 @@
 html {
     box-sizing: border-box;
 }
-
 *,
 *::before,
 *::after {
     box-sizing: inherit;
 }
-
 body {
     margin: 0;
     font-family: Oswald;
 }
-
 :root {
-    --accent-color: #F7654A;
+    --accent-color: #f7654a;
     --dark-color: #404149;
     --gray-color: #999;
-    --white-color: #FFF;
+    --white-color: #fff;
 }
-
 .container {
     max-width: 1110px;
     margin: 0 auto;
 }
-
 h1,
 h2,
 h3,
@@ -35,17 +30,14 @@ p {
     margin: 0;
     padding: 0;
 }
-
 button {
     border: none;
 }
-
 .header {
     min-height: 740px;
     background: url(../img/first-screen-bg.png) no-repeat;
     background-size: cover;
     padding-bottom: 310px;
-
     &__title {
         display: flex;
         justify-content: space-between;
@@ -54,7 +46,6 @@ button {
         margin-bottom: 112px;
     }
 }
-
 .burger {
     background-color: var(--accent-color);
     width: 50px;
@@ -65,14 +56,12 @@ button {
     align-items: center;
     padding: 16px 0;
     border: none;
-
     &__line {
         width: 21px;
         height: 3px;
         background-color: var(--white-color);
     }
 }
-
 .h1 {
     max-width: 734px;
     text-align: center;
@@ -85,7 +74,6 @@ button {
     margin: 0 auto 17px;
     color: var(--white-color);
 }
-
 .h4 {
     text-align: center;
     font-size: 18px;
@@ -95,13 +83,11 @@ button {
     text-transform: uppercase;
     color: var(--white-color);
 }
-
 .about {
     min-height: 1081px;
     position: relative;
     padding: 250px 0 110px;
 }
-
 .numbers {
     position: absolute;
     background-color: #f7f7f7;
@@ -115,13 +101,11 @@ button {
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     gap: 30px;
-
     &__item {
         width: 190px;
         height: 186px;
         text-align: center;
     }
-
     &__h4 {
         color: var(--accent-color);
         font-size: 72px;
@@ -131,7 +115,6 @@ button {
         text-transform: uppercase;
         margin-bottom: 4px;
     }
-
     &__h5 {
         font-size: 36px;
         font-style: normal;
@@ -139,7 +122,6 @@ button {
         line-height: normal;
         text-transform: uppercase;
     }
-
     &__p {
         color: var(--gray-color);
         font-size: 18px;
@@ -148,7 +130,6 @@ button {
         line-height: normal;
     }
 }
-
 .projects {
     &__h2 {
         color: var(--dark-color);
@@ -160,24 +141,19 @@ button {
         text-align: center;
         margin-bottom: 50px;
     }
-
     &__flex {
         display: flex;
     }
-
     &__flex-item {
         max-width: 350px;
         margin-right: 30px;
     }
-
     &__flex-item:last-child {
         margin-right: 0;
     }
-
     &__img {
         max-width: 100%;
     }
-
     &__h3 {
         color: var(--dark-color);
         font-size: 24px;
@@ -186,7 +162,6 @@ button {
         letter-spacing: 0.01em;
         margin-bottom: 13px;
     }
-
     &__p {
         color: #999;
         font-family: Open Sans;
@@ -195,27 +170,22 @@ button {
         font-weight: 400;
     }
 }
-
 .line {
     width: 55px;
     height: 6px;
     background-color: var(--accent-color);
     margin: 40px 0 15px;
 }
-
 .request {
     background-color: var(--accent-color);
     padding: 0 15px;
-
     &__flex {
         display: flex;
         justify-content: space-between;
     }
-
     &__flex-left {
         color: var(--white-color);
     }
-
     &__h4 {
         font-size: 48px;
         font-weight: 700;
@@ -223,14 +193,12 @@ button {
         text-transform: uppercase;
         margin: 30px 0 6px;
     }
-
     &__h5 {
         font-size: 24px;
         font-weight: 700;
         letter-spacing: 0.48px;
         text-transform: uppercase;
     }
-
     &__flex-btn {
         min-width: 175px;
         height: 49px;
@@ -238,9 +206,8 @@ button {
         margin: 73px 0 59px;
         display: flex;
         justify-content: space-between;
-        padding: 0px 30px;
+        padding: 0 30px;
     }
-
     &__flex-btn p {
         font-family: Oswald;
         font-size: 14px;
@@ -249,15 +216,12 @@ button {
         text-transform: uppercase;
         margin-top: 14px;
     }
-
     &__img {
         margin-top: 18px;
     }
 }
-
 .services {
     padding: 150px 0 147px;
-
     &__h2 {
         text-align: center;
         font-size: 36px;
@@ -265,7 +229,6 @@ button {
         text-transform: uppercase;
         margin-bottom: 55px;
     }
-
     &__grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -273,18 +236,15 @@ button {
         gap: 30px;
         justify-items: center;
     }
-
     &__grid-item {
         width: 350px;
         padding: 59px 0 61px;
         background-color: #f7f7f7;
     }
-
     &__icon {
         margin: 0 auto 22px;
         display: block;
     }
-
     &__h4 {
         max-width: 172px;
         text-transform: uppercase;
@@ -295,23 +255,19 @@ button {
         text-align: center;
     }
 }
-
 .portfolio {
     &__grid {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 0;
     }
-
     &__img {
         width: 100%;
         vertical-align: top;
     }
 }
-
 .questions {
     padding: 150px 0 110px;
-
     &__h2 {
         font-size: 36px;
         font-weight: 500;
@@ -319,7 +275,6 @@ button {
         margin-bottom: 50px;
         text-align: center;
     }
-
     &__h3 {
         font-size: 24px;
         font-weight: 500;
@@ -327,10 +282,8 @@ button {
         margin-bottom: 30px;
         text-transform: uppercase;
         letter-spacing: 0.01rem;
-
         &_close {
             margin-bottom: 33px;
-
             &::before {
                 content: "";
                 width: 15px;
@@ -340,15 +293,12 @@ button {
                 margin-right: 15px;
                 margin-bottom: 3px;
             }
-
-            &+p {
+            & + p {
                 display: none;
             }
         }
-
         &_open {
             margin-bottom: 22px;
-
             &::before {
                 content: "";
                 width: 15px;
@@ -361,7 +311,6 @@ button {
             }
         }
     }
-
     &__p {
         max-width: 730px;
         font-family: Open Sans;
@@ -370,11 +319,9 @@ button {
         margin-bottom: 36px;
     }
 }
-
 .partners {
     background-color: var(--dark-color);
     padding: 100px 0 75px;
-
     &__h2 {
         font-size: 36px;
         font-weight: 500;
@@ -383,27 +330,22 @@ button {
         color: var(--white-color);
         text-align: center;
     }
-
     &__flex {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-
     &__flex-item {
         max-width: 170px;
         margin-right: 40px;
         margin-bottom: 20px;
-
         &:nth-child(5n) {
             margin-right: 0;
         }
     }
 }
-
 .reviews {
     padding: 150px 0 144px;
-
     &__h2 {
         text-align: center;
         font-size: 36px;
@@ -411,19 +353,16 @@ button {
         text-transform: uppercase;
         margin-bottom: 65px;
     }
-
     &__grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;
     }
-
     &__card {
         padding: 19px 30px 33px;
         margin-bottom: 30px;
         background-color: #f7f7f7;
     }
-
     &__quotes {
         color: var(--accent-color);
         font-size: 96px;
@@ -432,33 +371,27 @@ button {
         line-height: 1;
         margin-bottom: -37px;
     }
-
     &__p {
         font-family: Open Sans;
         font-size: 14px;
         font-weight: 400;
         line-height: 21px;
     }
-
     &__h4 {
         font-size: 21px;
         font-weight: 500;
         letter-spacing: 0.42px;
     }
-
     &__author-accent {
         color: var(--accent-color);
         letter-spacing: 0.7px;
     }
 }
-
-.reviews+.request .request__h4 {
+.reviews + .request .request__h4 {
     letter-spacing: 1.25px;
 }
-
 .contacts {
     padding: 100px 0 120px;
-
     &__h2 {
         font-size: 36px;
         font-weight: 500;
@@ -466,41 +399,34 @@ button {
         text-align: center;
         margin-bottom: 60px;
     }
-
     &__grid {
         display: grid;
         gap: 30px;
         grid-template-columns: repeat(4, 1fr);
     }
-
     &__item {
         max-width: 250px;
         text-align: center;
     }
-
     &__icon {
         width: 50px;
         height: 50px;
         margin: 0 auto 10px;
     }
-
     &__h3 {
         font-size: 24px;
         font-weight: 500;
         text-transform: uppercase;
         margin-bottom: 30px;
-
         &_gray {
             color: var(--gray-color);
             margin-bottom: 18px;
         }
-
         &_accent {
             color: var(--accent-color);
         }
     }
 }
-
 .footer {
     background-color: var(--dark-color);
     padding: 30px 15px;
@@ -508,15 +434,12 @@ button {
     font-family: Open Sans;
     font-size: 16px;
     font-weight: 400;
-
     &__flex {
         display: flex;
         justify-content: space-between;
     }
 }
-
 @media screen and (max-width: 1280px) {
-
     .portfolio__grid,
     .numbers,
     .services__grid,
@@ -524,49 +447,38 @@ button {
     .contacts__grid {
         grid-template-columns: repeat(2, 1fr);
     }
-
     .about {
         padding: 460px 15px 100px;
     }
-
     .services {
         padding-right: 15px;
         padding-left: 15px;
     }
-
     .services__grid-item {
         width: 100%;
     }
-
     .questions {
         padding: 110px 15px;
     }
-
     .partners__flex {
         justify-content: center;
     }
-
     .partners__flex-item {
         margin-left: 15px;
         margin-right: 15px;
     }
-
     .partners__flex-item:nth-child(5n) {
         margin-left: 15px;
         margin-right: 15px;
     }
-
     .reviews {
         padding: 110px 15px;
     }
-
     .contacts__item {
         max-width: 100%;
     }
 }
-
 @media screen and (max-width: 768px) {
-
     .services__grid,
     .portfolio__grid,
     .numbers,
@@ -574,47 +486,37 @@ button {
     .contacts__grid {
         grid-template-columns: 1fr;
     }
-
     .about {
         padding-top: 890px;
     }
-
     .numbers {
         padding: 57px 0;
     }
-
     .projects__flex {
         flex-direction: column;
         align-items: center;
     }
-
     .projects__flex-item:not(:last-child) {
         margin: 0 0 30px 0;
     }
-
     .request__flex {
         flex-direction: column;
         align-items: center;
     }
-
     .request__flex-btn {
         margin: 50px 0;
     }
-
     .questions {
         padding-top: 60px;
     }
-
     .footer__flex {
         flex-direction: column;
     }
 }
-
 @media screen and (max-width: 375px) {
     .h1 {
         font-size: 48px;
     }
-
     .questions__h3 {
         font-size: 20px;
     }
